# xapi-grpc

./: dune-project
grpc-eio/: dune
grpc-unix/: connection.ml  dune  seq.ml  server.ml
h2-unix/: dune  gluten_unix.ml  h2_unix.ml
proto/: dune  xapi.proto  xenapi.proto
src/: client.ml  client_eio.ml  client_h2c.ml  dune  server.ml  server_eio.ml
