(library
 (name xapi_grpc)
 (package xapi-grpc)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (libraries ocaml-protoc-plugin.google_types ocaml-protoc-plugin))

(rule
 (targets google_include)
 (action
  (with-stdout-to
   %{targets}
   (system "pkg-config protobuf --variable=includedir"))))

(rule
 (targets xapi.ml)
 (deps
  (:proto xapi.proto))
 (action
  (run
   protoc
   -I
   %{read-lines:google_include}
   -I
   .
   "--ocaml_out=open=Google_types;annot=[@@deriving show { with_path = false }, eq]:."
   %{proto})))
