(executables
 (names server client_eio client_h2c)
; (package xapi-grpc)
; (public_names xapi-server xapi-client)
 (libraries
  grpc-eio
  grpc_unix
  eio_main
  h2-eio
  h2_unix
  httpun-eio
  ocaml-protoc-plugin
  xapi_grpc
  yojson
  ppx_deriving_yojson.runtime)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.eq)))
